# MimoCvd

./: .gitignore  CONTEXT.md  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  candles.json  clippy.toml  config.toml  rustfmt.toml  signal_generator.py  trades.db
cvdtrader-bot/: Cargo.toml
cvdtrader-bot/src/: health.rs  lib.rs  main.rs  orchestrator.rs
cvdtrader-core/: Cargo.toml
cvdtrader-core/src/: config.rs  history.rs  lib.rs  state.rs  types.rs
cvdtrader-execution/: Cargo.toml
cvdtrader-execution/src/: errors.rs  fills.rs  gateway.rs  lib.rs  ttl.rs
cvdtrader-market-data/: Cargo.toml
cvdtrader-market-data/src/: candle_builder.rs  indicators.rs  lib.rs  volume_profile.rs  vwap.rs  websocket.rs
cvdtrader-risk/: Cargo.toml
cvdtrader-risk/src/: circuit_breaker.rs  lib.rs  manager.rs
cvdtrader-strategy/: Cargo.toml
cvdtrader-strategy/src/: cvd_poc.rs  lib.rs  signals.rs
docs/: architecture.md  bot.md  changelog.md  core.md  environment_setup.md  execution.md  handover.md  issues.md  market-data.md  overview.md  risk.md  strategy.md  trades-db.md
skills/Strategist/: SKILL.md
skills/documentation/: SKILL.md
skills/plan-eng-review/: SKILL.md
skills/rust-async-patterns/: SKILL.md
skills/rust-async-patterns/resources/: implementation-playbook.md
skills/rust-best-practices-own/: SKILL.md
skills/rust-pro/: SKILL.md
skills/rust-refactor-helper/: SKILL.md
skills/rust-testing/: SKILL.md
tests/: failure_modes_test.rs  integration_test.rs
