[package]
name = "cvdtrader-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

[dev-dependencies]
tempfile = "3"
