[package]
name = "cvdtrader-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
cvdtrader-core = { path = "../cvdtrader-core" }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
hyperliquid_rust_sdk = { workspace = true }
