[package]
name = "cvdtrader-market-data"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
cvdtrader-core = { path = "../cvdtrader-core" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
statrs = { workspace = true }
reqwest = { workspace = true }
