[package]
name = "cvdtrader-risk"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
cvdtrader-core = { path = "../cvdtrader-core" }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
